# ogl-example-very-old

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clean_msvc_cmake_gen.bat  example_project.sln  gen_msvc_files.bat
example/src/: main.cpp
example/src/app/: app.cpp
project/src/app/: app.cpp  app.hpp
